Error fixed 1.SVG background white 2. Disable icon field when radio is not checked 3. changed label ad pentagon & &#39;Use Abbreviation as Symbol; 4. Maximize img overlaps issue 5. junction box after save not able to add component

--- a/src/app/custom-assembly/custom-assembly.component.scss
+++ b/src/app/custom-assembly/custom-assembly.component.scss
@@ -361,6 +361,7 @@
   padding: 0 !important;
   position: absolute;
   right: 0;
+  z-index: 2;
 }
 .edit-icon,
 .delete-icon {
